[metadata]
name = lrabbit_spider
version = 2.0.4
author = lrabbit
author_email = 709343607@qq.com
description = this is a small spider,you can easy running. When you often need to crawl a single site, you don't have to redo some repeated code every time, using this small framework you can quickly crawl data into a file or database.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/litter-rabbit/lrabbit_scrapy
project_urls =
    Bug Tracker = https://github.com/litter-rabbit/lrabbit_scrapy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src